USAGOV-1469-Homepage-grid-alignment-fix: Change the width of the cards

--- a/web/themes/custom/usagov/sass/_carousel.scss
+++ b/web/themes/custom/usagov/sass/_carousel.scss
@@ -223,7 +223,8 @@
     box-shadow: 4px 4px 4px 0 rgba(0 0 0 / 35%);
     padding: 0;
     text-align: left;
-    max-width: 260px;
+    // max-width: 260px;
+    max-width: 390px;
 
     a {
       @include u-text('white');
